crashloop-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: crashloop-pod
spec:
  containers:
  - name: main-container
    image: nginx
    ports:
    - containerPort: 80
    restartPolicy: Always
